[package]
name = "poker-onchain"
version = "0.1.0"
edition = "2021"

[dependencies]
linera-sdk = { version = "0.15.6", default-features = false }
async-graphql = { version = "7", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

poker-engine = { path = "../linera-poker" }

[lib]
crate-type = ["cdylib", "rlib"]

