[package]
name = "poker-onchain"
version = "0.1.0"
edition = "2021"

[dependencies]
linera-sdk = { version = "0.15.6", default-features = false }
linera-views = "0.15.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

poker-engine = { path = "../linera-poker" }

[lib]
name = "poker_onchain"
path = "src/lib.rs"

[[bin]]
name = "poker_onchain_contract"
path = "src/contract.rs"

[[bin]]
name = "poker_onchain_service"
path = "src/service.rs"
